--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "17.0.2",
     "react-hook-form": "^7.15.3",
     "react-select": "^4.3.1",
+    "styled-components": "^5.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
