--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.24",
+    "@babel/preset-typescript": "^7.15.0",
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "7.32.0",
