--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "@sanity/types": "^2.19.0",
-    "@staccx/bento": "^13.5.9",
+    "@staccx/bento": "^13.6.1",
+    "@staccx/eslint-config": "^10.1.0",
     "@types/node": "^16.10.1",
     "@types/styled-components": "^5.1.14",
     "@types/uuid": "^8.3.1",
@@ -21,7 +22,7 @@
     "react-hook-form": "^7.15.3",
     "react-router-dom": "^5.3.0",
     "react-select": "^4.3.1",
-    "styled-components": "^5.3.1",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -29,9 +30,12 @@
     "@types/jest": "^27.0.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-react": "^7.26.1",
     "source-map-loader": "^3.0.0",
     "typescript": "^3.9.10"
   }
